--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -100,6 +100,12 @@
 <!--        ::contentReference[oaicite:4]{index=4}-->
 
 
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <!-- Spring Boot 4.x uses Lettuce 6.x -->
+            <!-- Remove version tag, let Spring Boot manage it -->
+        </dependency>
 
 
         <dependency>
@@ -117,7 +123,11 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
