--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,21 @@ services:
     networks:
       - backend-network
 
+  redis:
+    image: redis:7-alpine
+    container_name: auth-redis
+    ports:
+      - "6379:6379"
+    networks:
+      - backend-network
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   service-registry:
     container_name: service-registry
     build:
@@ -51,7 +66,10 @@ services:
 
 volumes:
   mysql-data:
+  redis-data:
 
 networks:
   backend-network:
     driver: bridge
+
+
