--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -62,3 +62,28 @@ eureka:
 
 server:
   port: 8080
+
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      authService:
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: 30s
+        permittedNumberOfCallsInHalfOpenState: 3
+        minimumNumberOfCalls: 20
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        recordExceptions:
+          - org.springframework.dao.DataAccessException
+          - java.net.ConnectException
+          - org.springframework.data.redis.RedisConnectionFailureException
+        ignoreExceptions:
+          - org.springframework.security.authentication.BadCredentialsException
+          - org.springframework.security.authentication.DisabledException
+
+  timelimiter:
+    instances:
+      authTimeout:
+        timeoutDuration: 5s
+        cancelRunningFuture: true
