--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,127 @@
-services:
+#services:
+#
+#  mysql-db:
+#    image: mysql:8.0
+#    container_name: mysql-db
+#    environment:
+#      MYSQL_ROOT_PASSWORD: captain@cz
+#      MYSQL_DATABASE: auth_service
+#    ports:
+#      - "3307:3306"
+#    networks:
+#      - backend-network
+#    healthcheck:
+#      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#    volumes:
+#      - mysql-data:/var/lib/mysql
+#
+#  auth-service:
+#    container_name: auth-service
+#    build:
+#      context: ./auth-service
+#      dockerfile: Dockerfile
+#    image: auth-service:latest
+#    restart: always
+#    env_file:
+#      - ./auth-service/.env
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - mysql-db
+#    networks:
+#      - backend-network
+#
+#  redis:
+#    image: redis:7-alpine
+#    container_name: auth-redis
+#    ports:
+#      - "6379:6379"
+#    networks:
+#      - backend-network
+#    volumes:
+#      - redis-data:/data
+#    healthcheck:
+#      test: ["CMD", "redis-cli", "ping"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#
+#
+#  service-registry:
+#    build: ./service-registry
+#    container_name: service-registry
+#    ports:
+#      - "8761:8761"
+#    networks:
+#      - backend-network
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,metrics
+#
+#
+#  user-service:
+#    container_name: user-service
+#    build:
+#      context: ./user-service
+#      dockerfile: Dockerfile
+#    image: user-service:latest
+#    restart: always
+#    env_file:
+#      - ./user-service/.env  # Your .env file
+#    ports:
+#      - "8090:8090"
+#    depends_on:
+#      mysql-db:
+#        condition: service_healthy
+#    networks:
+#      - backend-network
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/user-service?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#    healthcheck:
+#      test: [ "CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 60s
+#
+#volumes:
+#  mysql-data:
+#  redis-data:
+#
+#networks:
+#  backend-network:
+#    driver: bridge
+#
+#
 
+services:
   mysql-db:
     image: mysql:8.0
     container_name: mysql-db
     environment:
       MYSQL_ROOT_PASSWORD: captain@cz
-      MYSQL_DATABASE: auth_service
+      MYSQL_DATABASE: default_db  # Create a default database
     ports:
       - "3307:3306"
     networks:
       - backend-network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-pcaptain@cz"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 30s
     volumes:
       - mysql-data:/var/lib/mysql
-
-  auth-service:
-    container_name: auth-service
-    build:
-      context: ./auth-service
-      dockerfile: Dockerfile
-    image: auth-service:latest
-    restart: always
-    env_file:
-      - ./auth-service/.env
-    ports:
-      - "8080:8080"
-    depends_on:
-      - mysql-db
-    networks:
-      - backend-network
+    command:
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
 
   redis:
     image: redis:7-alpine
@@ -47,22 +136,89 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 20s
+    command: redis-server --appendonly yes
 
   service-registry:
+    build: ./service-registry
     container_name: service-registry
-    build:
-      context: ./service-registry
-      dockerfile: Dockerfile
     ports:
       - "8761:8761"
     networks:
       - backend-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,metrics
+    depends_on:
+      - mysql-db
+      - redis
+
+  auth-service:
+    container_name: auth-service
+    build:
+      context: ./auth-service
+      dockerfile: Dockerfile
+    image: auth-service:latest
+    restart: always
+    env_file:
+      - ./auth-service/.env
+    ports:
+      - "8080:8080"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      service-registry:
+        condition: service_started
+    networks:
+      - backend-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+      # Auth service uses auth_db database
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=captain@cz
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8761/actuator/health || exit 1"]
+      test: [ "CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 60s
+
+  user-service:
+    container_name: user-service
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    image: user-service:latest
+    restart: always
+    env_file:
+      - ./user-service/.env
+    ports:
+      - "8090:8090"
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      service-registry:
+        condition: service_started
+    networks:
+      - backend-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+      # User service uses user_db database (separate database)
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=captain@cz
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
 volumes:
   mysql-data:
@@ -71,5 +227,3 @@ volumes:
 networks:
   backend-network:
     driver: bridge
-
-
