--- a/user-service/.gitignore
+++ b/user-service/.gitignore
@@ -1,10 +1,10 @@
-HELP.md
+# Maven / Gradle
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
+# STS ###
 .apt_generated
 .classpath
 .factorypath
@@ -13,13 +13,13 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+# IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -29,5 +29,15 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# VS Code ###
 .vscode/
+
+# Environment files
+*.env
+
+# Ignore test classes
+**/src/test/**
+
+# Optional: Ignore logs and temp files
+*.log
+*.tmp
