--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,135 @@
+#
+#
+#services:
+#  mysql-db:
+#    image: mysql:8.0
+#    container_name: mysql-db
+#    environment:
+#      MYSQL_ROOT_PASSWORD: captain@cz
+#      MYSQL_DATABASE: default_db  # Create a default database
+#    ports:
+#      - "3307:3306"
+#    networks:
+#      - backend-network
+#    healthcheck:
+#      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-pcaptain@cz"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 30s
+#    volumes:
+#      - mysql-data:/var/lib/mysql
+#    command:
+#      - --default-authentication-plugin=mysql_native_password
+#      - --character-set-server=utf8mb4
+#      - --collation-server=utf8mb4_unicode_ci
+#
+#  redis:
+#    image: redis:7-alpine
+#    container_name: auth-redis
+#    ports:
+#      - "6379:6379"
+#    networks:
+#      - backend-network
+#    volumes:
+#      - redis-data:/data
+#    healthcheck:
+#      test: ["CMD", "redis-cli", "ping"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 20s
+#    command: redis-server --appendonly yes
+#
+#  service-registry:
+#    build: ./service-registry
+#    container_name: service-registry
+#    ports:
+#      - "8761:8761"
+#    networks:
+#      - backend-network
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,metrics
+#    depends_on:
+#      - mysql-db
+#      - redis
+#
+#
+#  auth-service:
+#    container_name: auth-service
+#    build:
+#      context: ./auth-service
+#      dockerfile: Dockerfile
+#    image: auth-service:latest
+#    restart: always
+#    env_file:
+#      - ./auth-service/.env
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      mysql-db:
+#        condition: service_healthy
+#      redis:
+#        condition: service_healthy
+#      service-registry:
+#        condition: service_started
+#    networks:
+#      - backend-network
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+#      # Auth service uses auth_db database
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+#      - SPRING_DATASOURCE_USERNAME=root
+#      - SPRING_DATASOURCE_PASSWORD=captain@cz
+#    healthcheck:
+#      test: [ "CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 60s
+#
+#  user-service:
+#    container_name: user-service
+#    build:
+#      context: ./user-service
+#      dockerfile: Dockerfile
+#    image: user-service:latest
+#    restart: always
+#    env_file:
+#      - ./user-service/.env
+#    ports:
+#      - "8090:8090"
+#    depends_on:
+#      mysql-db:
+#        condition: service_healthy
+#      service-registry:
+#        condition: service_started
+#    networks:
+#      - backend-network
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+#      # User service uses user_db database (separate database)
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+#      - SPRING_DATASOURCE_USERNAME=root
+#      - SPRING_DATASOURCE_PASSWORD=captain@cz
+#    healthcheck:
+#      test: [ "CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1" ]
+#      interval: 30s
+#      timeout: 10s
+#      retries: 3
+#      start_period: 60s
+#
+#volumes:
+#  mysql-data:
+#  redis-data:
+#
+#networks:
+#  backend-network:
+#    driver: bridge
+
 
 
 services:
@@ -23,6 +155,62 @@ services:
       - --default-authentication-plugin=mysql_native_password
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+
+  keycloak-db:
+    image: mysql:8.0
+    container_name: keycloak-db
+    environment:
+      MYSQL_DATABASE: keycloak
+      MYSQL_USER: keycloak
+      MYSQL_PASSWORD: keycloak123
+      MYSQL_ROOT_PASSWORD: captain@cz
+    volumes:
+      - keycloak-data:/var/lib/mysql
+    networks:
+      - backend-network
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --skip-character-set-client-handshake
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.0
+    container_name: keycloak
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin123
+      KC_DB: mysql
+      KC_DB_URL_HOST: keycloak-db
+      KC_DB_URL_PORT: 3306
+      KC_DB_URL_DATABASE: keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak123
+      KC_HOSTNAME_STRICT: 'false'
+      KC_HOSTNAME_STRICT_HTTPS: 'false'
+#      KC_HOSTNAME: localhost
+      KC_PROXY: edge
+      KC_HTTP_ENABLED: 'true'
+    ports:
+      - "8080:8080"
+    depends_on:
+      keycloak-db:
+        condition: service_healthy
+    networks:
+      - backend-network
+    command: start-dev
+    healthcheck:
+      # Simple port check - most reliable
+      test: [ "CMD-SHELL", "timeout 2 bash -c 'cat < /dev/null > /dev/tcp/localhost/8080'" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 120s
 
   redis:
     image: redis:7-alpine
@@ -52,8 +240,38 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,info,metrics
     depends_on:
-      - mysql-db
-      - redis
+      mysql-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  api-gateway:
+    container_name: api-gateway
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    image: api-gateway:latest
+    restart: always
+    ports:
+      - "8765:8765"
+    networks:
+      - backend-network
+    depends_on:
+      service-registry:
+        condition: service_started
+      keycloak:
+        condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+      - SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI=http://keycloak:8080/realms/microservices-realm
+      - KEYCLOAK_SECRET=BT80U9JXgOrOH6Le9yTL3pWRIC4sRGPR
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8765/actuator/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
   auth-service:
     container_name: auth-service
@@ -65,7 +283,7 @@ services:
     env_file:
       - ./auth-service/.env
     ports:
-      - "8080:8080"
+      - "8081:8081"
     depends_on:
       mysql-db:
         condition: service_healthy
@@ -73,17 +291,21 @@ services:
         condition: service_healthy
       service-registry:
         condition: service_started
+      keycloak:
+        condition: service_healthy
     networks:
       - backend-network
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SERVER_PORT=8081
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
       # Auth service uses auth_db database
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=captain@cz
+      - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/microservices-realm
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1" ]  # Fixed port from 8080 to 8081
       interval: 30s
       timeout: 10s
       retries: 3
@@ -105,6 +327,8 @@ services:
         condition: service_healthy
       service-registry:
         condition: service_started
+      keycloak:
+        condition: service_healthy
     networks:
       - backend-network
     environment:
@@ -114,6 +338,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=captain@cz
+      - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/microservices-realm
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://localhost:8090/actuator/health || exit 1" ]
       interval: 30s
@@ -124,6 +349,7 @@ services:
 volumes:
   mysql-data:
   redis-data:
+  keycloak-data:  # Added missing volume
 
 networks:
   backend-network:
