--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -1,185 +1,3 @@
-#spring:
-#  application:
-#    name: api-gateway
-#
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          issuer-uri: ${KEYCLOAK_ISSUER_URI}
-#          jwk-set-uri: ${KEYCLOAK_JWT_SET_URI}
-#
-#  cloud:
-#    gateway:
-#      discovery:
-#        locator:
-#          enabled: true  # ← CHANGE TO false
-#          lower-case-service-id: false
-#      routes:
-#        - id: auth-service
-#          uri: lb://AUTH-SERVICE
-#          predicates:
-#            - Path=/api/v1/auth/**
-#
-#        - id: user-service
-#          uri: lb://USER-SERVICE
-#          predicates:
-#            - Path=/api/users/**
-#
-#        - id: discovery-server-web
-#          uri: http://service-registry:8761
-#          predicates:
-#            - Path=/eureka/web
-#          filters:
-#            - SetPath=/
-#
-#        - id: discovery-server-static
-#          uri: http://service-registry:8761
-#          predicates:
-#            - Path=/eureka/**
-#
-#server:
-#  port: 8765
-#
-#keycloak:
-#  auth-server-url: http://localhost:8080
-#  realm: microservices-realm
-#  resource: spring-cloud-client
-#  credentials:
-#    secret: ${KEYCLOAK_CLIENT_SECRET}
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://service-registry:8761/eureka/
-#    fetch-registry: true
-#    register-with-eureka: true
-#    healthcheck:
-#      enabled: true
-#  instance:
-#    prefer-ip-address: true
-#    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-#    lease-renewal-interval-in-seconds: 10
-#    lease-expiration-duration-in-seconds: 30
-#
-#logging:
-#  level:
-#    org.springframework.security: DEBUG
-#    com.netflix.eureka: OFF
-#    com.netflix.discovery: OFF
-#    org.springframework.cloud.gateway: TRACE  # ← CHANGE TO TRACE
-#    org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: DEBUG
-#    org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping: DEBUG
-#    reactor.netty: DEBUG
-#
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#      base-path: /actuator
-#  endpoint:
-#    health:
-#      show-details: always
-#    gateway:
-#      enabled: true
-#    routes:
-#      enabled: true
-
-#spring:
-#  application:
-#    name: api-gateway
-#
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          issuer-uri: ${KEYCLOAK_ISSUER_URI}
-#          jwk-set-uri: ${KEYCLOAK_JWT_SET_URI}
-#
-#  cloud:
-#    gateway:
-#      discovery:
-#        locator:
-#          enabled: true  # MUST be true for lb:// URIs to work
-#          lower-case-service-id: true  # Converts service names to lowercase
-#      routes:
-#        - id: auth-service
-#          uri: lb://auth-service  # Changed to lowercase to match setting
-#          predicates:
-#            - Path=/api/v1/auth/**
-#          filters:
-#            - StripPrefix=0  # Optional: keeps the full path
-#
-#        - id: user-service
-#          uri: lb://user-service  # Changed to lowercase to match setting
-#          predicates:
-#            - Path=/api/users/**
-#          filters:
-#            - StripPrefix=0  # Optional: keeps the full path
-#
-#        - id: discovery-server-web
-#          uri: http://service-registry:8761
-#          predicates:
-#            - Path=/eureka/web
-#          filters:
-#            - SetPath=/
-#
-#        - id: discovery-server-static
-#          uri: http://service-registry:8761
-#          predicates:
-#            - Path=/eureka/**
-#
-#server:
-#  port: 8765
-#
-#keycloak:
-#  auth-server-url: http://localhost:8080
-#  realm: microservices-realm
-#  resource: spring-cloud-client
-#  credentials:
-#    secret: ${KEYCLOAK_CLIENT_SECRET}
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://service-registry:8761/eureka/
-#    fetch-registry: true
-#    register-with-eureka: true
-#    healthcheck:
-#      enabled: true
-#  instance:
-#    prefer-ip-address: true
-#    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-#    lease-renewal-interval-in-seconds: 10
-#    lease-expiration-duration-in-seconds: 30
-#
-#logging:
-#  level:
-#    org.springframework.security: DEBUG
-#    com.netflix.eureka: INFO  # Changed from OFF to see registration status
-#    com.netflix.discovery: INFO  # Changed from OFF to see discovery issues
-#    org.springframework.cloud.gateway: TRACE
-#    org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: DEBUG
-#    org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping: DEBUG
-#    reactor.netty: DEBUG
-#
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#      base-path: /actuator
-#  endpoint:
-#    health:
-#      show-details: always
-#    gateway:
-#      enabled: true
-#  # Fixed: moved 'routes' under 'management.endpoint' properly
-#  tracing:
-#    enabled: false
-
-
 
 spring:
   application:
@@ -229,8 +47,8 @@ eureka:
 logging:
   level:
     org.springframework.security: DEBUG
-    com.netflix.eureka: INFO  # Changed from OFF to see registration status
-    com.netflix.discovery: INFO  # Changed from OFF to see discovery issues
+    com.netflix.eureka: INFO
+    com.netflix.discovery: INFO
     org.springframework.cloud.gateway: TRACE
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: DEBUG
     org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping: DEBUG
