--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -133,6 +133,10 @@
             <version>0.12.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
