--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,43 +140,44 @@ services :
       retries : 3
       start_period : 60s
 
-  auth-service :
-    container_name : auth-service
-    build :
-      context : ./auth-service
-      dockerfile : Dockerfile
-    image : auth-service:latest
-    restart : always
-    env_file :
+
+  auth-service:
+    container_name: auth-service
+    build:
+      context: ./auth-service
+      dockerfile: Dockerfile
+    image: auth-service:latest
+    restart: always
+    env_file:
       - ./auth-service/.env
-    ports :
+    ports:
       - "8081:8081"
-    depends_on :
-      mysql-db :
-        condition : service_healthy
-      redis :
-        condition : service_healthy
-      service-registry :
-        condition : service_started
-      keycloak :
-        condition : service_healthy
-    networks :
+    depends_on:
+      mysql-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      service-registry:
+        condition: service_started
+      keycloak:
+        condition: service_healthy
+    networks:
       - backend-network
-    environment :
+    environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SERVER_PORT=8081
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
-      # Auth service uses auth_db database
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/auth_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-      - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
-      - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
       - KEYCLOAK_ISSUER_URI=http://keycloak:8080/realms/microservices-realm
-    healthcheck :
-      test : [ "CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1" ]  # Fixed port from 8080 to 8081
-      interval : 30s
-      timeout : 10s
-      retries : 3
-      start_period : 60s
+      - KEYCLOAK_AUTH_SERVER_URL=http://keycloak:8080  # ✅ ADD THIS
+      - KEYCLOAK_REALM=microservices-realm              # ✅ ADD THIS
+      - KEYCLOAK_ADMIN_USERNAME=admin                   # ✅ ADD THIS (or use from .env)
+      - KEYCLOAK_ADMIN_PASSWORD=admin123                # ✅ ADD THIS (or use from .env)
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 
   user-service:
     container_name: user-service
