feat: completed core backend services and began frontend integration for user-management-service

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -28,6 +28,11 @@ spring:
           uri: http://service-registry:8761
           predicates:
             - Path=/eureka/**
+        - id: user-management-service
+          uri: lb://user-management-service
+          predicates:
+            - Path=/api/admin/users/**
+
 
 server:
   port: 8765
